<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ReservingPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/no_agency_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/choose_agency_first"
            android:textSize="30sp"
            android:visibility="gone"
            android:layout_marginTop="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/agency_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/agency_name_default"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            android:maxLines="2"
            android:ellipsize="middle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/update_counter_tv"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/agency_status_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agency_status_default"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/agency_name_tv" />

        <TextView
            android:id="@+id/update_counter_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_timer_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/agency_status_tv"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/service_type_dm"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:enabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/agency_name_tv">

            <AutoCompleteTextView
                android:id="@+id/service_type_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/service_type"
                android:inputType="none"
                android:text="@string/service_type_default"
                android:enabled="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/agency_pending_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/agency_pending_default"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/service_type_dm" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reservation_data_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/agency_pending_tv" />

        <Button
            android:id="@+id/reservation_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/reservation"
            android:enabled="false"
            app:layout_constraintBottom_toTopOf="@id/reservation_data_rv"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>