<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:elevation="10dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:focusable="true"
    android:clickable="true"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motion_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layoutDescription="@xml/agency_row_xml_scene">

        <ImageView
            android:id="@+id/favorite_btn"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_round_star_border_48"
            android:contentDescription="@string/favorite"
            app:layout_constraintEnd_toStartOf="@id/location_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/agency_pending_tv" />

        <Button
            android:id="@+id/location_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:enabled="false"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/agency_pending_tv"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/reservation_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservation"
            android:enabled="false"
            app:layout_constraintTop_toBottomOf="@id/agency_pending_tv"
            app:layout_constraintStart_toEndOf="@id/location_btn"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/agency_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="middle"
            android:maxLines="1"
            android:text="@string/agency_name_default"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/agency_status_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/agency_status_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agency_status_default"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/agency_pending_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agency_pending_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/agency_name_tv" />

        <TextView
            android:id="@+id/agency_distance_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agency_distance_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/agency_name_tv" />

    </androidx.constraintlayout.motion.widget.MotionLayout>

</androidx.cardview.widget.CardView>