<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:elevation="10dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:focusable="true"
    android:clickable="true"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/agency_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/agency_name_default"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:ellipsize="middle"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/reservation_state_tv"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/reservation_state_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservation_state_default"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/service_type_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/service_type_default"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/date_time_tv"
            app:layout_constraintTop_toBottomOf="@id/agency_name_tv" />

        <TextView
            android:id="@+id/date_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservation_date_time_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>