<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_map_page_scene"
    android:background="@color/google_map"
    tools:context=".MapPage">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/info_cv"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginBottom="-5dp"
        android:background="@drawable/top_shadow_gradient"
        app:layout_constraintBottom_toTopOf="@id/info_cv" />

    <androidx.cardview.widget.CardView
        android:id="@+id/info_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-10dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/info_name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/agency_name_default"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:maxLines="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/info_agency_type_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agency_type_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_name_tv"/>

            <TextView
                android:id="@+id/info_distance_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agency_distance_default"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@id/info_agency_type_tv"
                app:layout_constraintTop_toTopOf="@id/info_agency_type_tv"/>

            <TextView
                android:id="@+id/info_agency_status_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agency_status_default"
                android:layout_marginBottom="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_agency_type_tv"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/favorite_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_round_star_border_48"
                android:contentDescription="@string/favorite"
                android:layout_marginBottom="10dp"
                app:layout_constraintStart_toEndOf="@id/info_distance_tv"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <Button
                android:id="@+id/info_reservation_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reservation"
                android:layout_marginBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.motion.widget.MotionLayout>